--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} CConverter {% endblock %}
+{% block title %} GConverter {% endblock %}
 
 
 {% block content %}
