--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,6 +1,6 @@
 .content {
     padding: 0 1.5% 0.5%;
-    margin: 14% 40% 0;
+    margin: 4% 40% 0;
     background: #4141417e;
     text-align: center;
     border-radius: 7%;
@@ -14,11 +14,11 @@ label {
 
 .rezult { text-align: center}
 
+body, html { height: 80% }
 body {
     background-image: url('background.webp');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    height: 100%;
     width: 100%
 }
